[package]
name = "ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["in-order","bfs"]
in-order = []
pre-order = []
post-order = []
bfs = []

[dependencies]
rand = "^0.8"
futures = "0.3"

simple_graph_algorithms = "1.0.0"
dijkstra = "0.1"
nalgebra = "0.10.1"
